--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -54,8 +54,8 @@ Full set of changes since 0.6.0:
 
 * Ability to mock magic methods with `Mock` and addition of `MagicMock`
   with pre-created magic methods
-* Addition of `mocksignature`
-* Addition of `mocksignature` argument to `patch` and `patch.object`
+* Addition of `mocksignature` and `mocksignature` argument to `patch` and
+  `patch.object`
 * Addition of `patch.dict` for changing dictionaries during a test
 * Ability to use `patch`, `patch.object` and `patch.dict` as class decorators
 * Python 3 compatibility (tested with 3.2 but should work with 3.0 & 3.1 as
